# LabyriLanguage

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Labyri-grammer.bnf  README.md  bench.sh  build.sh  out.clab  premake5.lua  test.sh
.tup/: db
build64/: Language.make  Makefile
old/: lexer.c  lexer.h  lexer_conf.c  lexer_conf.h
samples/: Basic.lab  Concept1.lab  Concept2.lab  Concept3.lab  Concept4.lab  Updated.lab
src/: arg_parser.c  arg_parser.h  ast.c  ast.h  helper_macros.h  lexer.c  lexer.h  lexer_conf.c  lexer_conf.h  lexer_new.h  logger.c  logger.h  main.c  parser.c  parser.h  parser_old.h  repl.c  repl.h  tokens.h  utilities.c  utilities.h  vm.c  vm.h
test/: 1millionlines.lex.7z  LabCompiler  Language  lab  replcommandstest  runtest.lab  test0.lab  test1.lab  test2.lab  test2_c4.lab
